# dps422-rs

./: Cargo.toml  README.md  build.rs
examples/: stm32g070.rs
src/: config.rs  lib.rs  register.rs
