[package]
name = "dps422"
authors = ["github.com/ijager"]
edition = "2018"
description = "A platform agnostic driver to interface with the DPS422 barometric pressure & temp sensor through I2C"
documentation = "https://docs.rs/dps422"
keywords = ["embedded-hal-driver", "pressure", "temperature", "sensor", "infineon"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/devboard-io/dps422-rs"
categories  = ["embedded", "hardware-support", "no-std"]
version = "0.1.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[dependencies]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"

[dev-dependencies.stm32g0xx-hal]
features = ["stm32g07x", "rt"]
version = "0.0.7"
